releasing 0.0.2 of lifx addon

--- a/script.kodi.lifx.ambilight/resources/language/English/strings.xml
+++ b/script.kodi.lifx.ambilight/resources/language/English/strings.xml
@@ -28,7 +28,7 @@
   <string id="1350">All lights</string>
   <string id="1351">Group of lights</string>
   <string id="1360">Group Name</string>
-  <string id="1370">You can just enter a unique keyword from the Group name</string>
+  <string id="1370">Keyword from the Group name e.g. TV</string>
 
   <!-- Theater -->
   <string id="2000">Theater</string>
