--- a/script.kodi.lifx.ambilight/resources/language/English/strings.xml
+++ b/script.kodi.lifx.ambilight/resources/language/English/strings.xml
@@ -83,6 +83,8 @@
   <string id="3201">Minimum brightness</string>
   <string id="3202">Maximum brightness</string>
 
+  <string id="3240">Use old ambilight algorithm</string>
+  
   <string id="3300">Color</string>
   <string id="3301">Color Bias</string>
   <string id="3302">Sensitivity: 6=variety with >1 light, 36=accuracy</string>
